--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,86 @@
   box-sizing: border-box;
 }
 
+
+.hero-container {
+  display:inline-block
+  
+}
+
+.hero-text {
+  
+  font-size: 5em;
+  letter-spacing: 10px;
+  
+  font-family: monospace;
+  border-right: 5px solid;
+  width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  animation:
+    typing 2s steps(27),
+    cursor 0.4s step-end infinite alternate;
+}
+
+@keyframes cursor {
+  50% {
+    border-color: transparent;
+  }
+}
+
+@keyframes typing {
+  from {
+    width: 0;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+Header {
+
+  font-family: "Times New Roman", Times, serif;
+  font-size: 1.15rem;   
+  letter-spacing: 0.05em;
+  font-weight: 400;
+
+  animation: glow 6s ease-in-out infinite alternate;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  z-index: 1000;
+
+  background:
+    radial-gradient(
+      ellipse at center,
+      rgba(255, 255, 255, 0.08) 0%,
+      rgba(0, 0, 0, 0.9) 65%
+    ),
+    linear-gradient(
+      to bottom,
+      #0b0b0b,
+      #000000
+    );
+
+  box-shadow:
+    inset 0 -1px 0 rgba(255,255,255,0.05),
+    0 4px 20px rgba(0,0,0,0.6);
+}
+
 :root {
   --primary: #2563eb;
   --secondary: #1e40af;
@@ -38,6 +118,16 @@ ul {
   max-width: 1200px;
   margin: 0 auto;
 }
+.nav-btn {
+  position: relative;
+  padding: 0.4em 1.1em;
+  border-radius: 999px;
+
+  z-index: 1;
+  
+  color: white;
+  transition: color 0.3s ease, transform 0.2s ease;
+}
 
 
 header {
@@ -53,7 +143,7 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1.5rem 0;
+  padding: 1rem 0;
 }
 
 .logo {
