--- a/src/index.css
+++ b/src/index.css
@@ -123,6 +123,7 @@
 }
 
 .hero-scroll-indicator {
+  
   position: absolute;
   bottom: 1.5rem;
   left: 50%;
@@ -144,9 +145,10 @@
 
 .scroll-down span {
   font-size: 0.85rem;
-  margin-bottom: 0.5rem;
+  padding-bottom: 0.5rem; 
   letter-spacing: 1px;
 }
+
 
 .scroll-down i {
   font-size: 1.3rem;
@@ -453,6 +455,54 @@ nav {
   font-size: 1.5rem;
   cursor: pointer;
 }
+@media (max-width: 768px) {
+
+  .nav-links {
+    position: absolute;
+    top: 100%;
+    left: 0;
+
+    width: 100vw;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;   
+    justify-content: center;
+
+    padding: 1.5rem 0;
+    gap: 1.2rem;
+
+    background: #000;
+    z-index: 999;
+    
+    
+
+    transform: translateY(-10px);
+    opacity: 0;
+    pointer-events: none;
+    transition: all 0.3s ease;
+  }
+
+  .nav-links.active {
+    transform: translateY(0);
+    opacity: 1;
+    pointer-events: auto;
+  }
+
+  .nav-links li {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-top: -16px;
+    
+  }
+
+  .nav-links a {
+    width: auto;
+    text-align: center;
+    padding: 0.7rem 1.5rem;
+  }
+}
 
 
 .hero {
@@ -695,7 +745,7 @@ footer {
 
 @media (max-width: 768px) {
   .nav-links {
-    display: none;
+    display: inline-block;
   }
 
   .hamburger {
